--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/IconButtonStyles.xaml
@@ -56,15 +56,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                             <ContentPresenter
                                 Content="{TemplateBinding Content}"
-                                VerticalAlignment="Center">
-
-                                <!--<ContentPresenter.Resources>
-                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource {x:Type TextBlock}}">
-                                        <Setter Property="VerticalAlignment" Value="Center" />
-                                    </Style>
-                                </ContentPresenter.Resources>-->
-
-                            </ContentPresenter>
+                                VerticalAlignment="Center" />
 
                         </StackPanel>
 
