--- a/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/SprintsList/SprintsListView.xaml
@@ -43,164 +43,190 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <ListView
-        ItemsSource="{Binding Sprints}"
-        SelectedItem="{Binding SelectedSprint}"
-        SelectionMode="Single"
-        BorderThickness="0">
+    <customControls:MissingContentPanel
+        IsContentVisible="{Binding HasSprints}">
 
-        <ListView.ItemContainerStyle>
-            <Style TargetType="ListViewItem">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type ListViewItem}">
+        <customControls:MissingContentPanel.MissingContent>
+            <Border
+                Background="{StaticResource PrimaryDarkBrush}">
 
-                            <Border
-                                x:Name="PART_Border"
-                                Padding="8"
-                                SnapsToDevicePixels="true"
-                                Background="Transparent"
-                                MinHeight="40">
+                <ContentControl
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    MinWidth="300">
 
-                                <VisualStateManager.VisualStateGroups>
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="20"
+                        Text="No Sprints"
+                        IsEnabled="False" />
 
-                                    <VisualStateGroup x:Name="CommonStates">
-                                        <VisualState x:Name="Normal">
-                                            <Storyboard AutoReverse="True">
+                </ContentControl>
 
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="TextBlock1"
-                                                    Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
+            </Border>
+        </customControls:MissingContentPanel.MissingContent>
 
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
-                                                </ColorAnimationUsingKeyFrames>
+        <ListView
+            ItemsSource="{Binding Sprints}"
+            SelectedItem="{Binding SelectedSprint}"
+            SelectionMode="Single"
+            BorderThickness="0">
 
-                                            </Storyboard>
-                                        </VisualState>
-                                    </VisualStateGroup>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
 
-                                    <VisualStateGroup x:Name="SelectionStates">
-
-                                        <VisualState x:Name="Unselected">
-                                            <Storyboard>
-
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="TextBlock1"
-                                                    Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
-
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
-                                                </ColorAnimationUsingKeyFrames>
-
-                                            </Storyboard>
-                                        </VisualState>
-
-                                        <VisualState x:Name="Selected">
-                                            <Storyboard>
-
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="PART_Border"
-                                                    Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource AccentColor}" />
-                                                </ColorAnimationUsingKeyFrames>
-
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="TextBlock1"
-                                                    Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
-
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontPrimaryColor}" />
-                                                </ColorAnimationUsingKeyFrames>
-
-                                            </Storyboard>
-                                        </VisualState>
-
-                                        <VisualState x:Name="SelectedUnfocused">
-                                            <Storyboard>
-
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="PART_Border"
-                                                    Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
-
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource PrimaryLightColor}" />
-                                                </ColorAnimationUsingKeyFrames>
-
-                                                <ColorAnimationUsingKeyFrames
-                                                    Storyboard.TargetName="TextBlock1"
-                                                    Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
-
-                                                    <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
-                                                </ColorAnimationUsingKeyFrames>
-
-                                            </Storyboard>
-                                        </VisualState>
-
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
-
-                                <DockPanel
-                                    x:Name="DockPanel1"
-                                    Margin="10 0"
+                                <Border
+                                    x:Name="PART_Border"
+                                    Padding="8"
+                                    SnapsToDevicePixels="true"
+                                    Background="Transparent"
                                     MinHeight="40">
 
-                                    <customControls:SprintStateControl
-                                        x:Name="SprintStateControl1"
-                                        DockPanel.Dock="Left"
-                                        Margin="0 3 15 3"
-                                        Value="{Binding SprintState}"
-                                        IsLabelVisible="False"
-                                        VerticalAlignment="Top" />
+                                    <VisualStateManager.VisualStateGroups>
 
-                                    <StackPanel
-                                        Margin="0 2">
+                                        <VisualStateGroup x:Name="CommonStates">
+                                            <VisualState x:Name="Normal">
+                                                <Storyboard AutoReverse="True">
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="TextBlock1"
+                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                </Storyboard>
+                                            </VisualState>
+                                        </VisualStateGroup>
+
+                                        <VisualStateGroup x:Name="SelectionStates">
+
+                                            <VisualState x:Name="Unselected">
+                                                <Storyboard>
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="TextBlock1"
+                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                </Storyboard>
+                                            </VisualState>
+
+                                            <VisualState x:Name="Selected">
+                                                <Storyboard>
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="PART_Border"
+                                                        Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource AccentColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="TextBlock1"
+                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontPrimaryColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                </Storyboard>
+                                            </VisualState>
+
+                                            <VisualState x:Name="SelectedUnfocused">
+                                                <Storyboard>
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="PART_Border"
+                                                        Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource PrimaryLightColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                    <ColorAnimationUsingKeyFrames
+                                                        Storyboard.TargetName="TextBlock1"
+                                                        Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)">
+
+                                                        <EasingColorKeyFrame KeyTime="0" Value="{StaticResource FontDimColor}" />
+                                                    </ColorAnimationUsingKeyFrames>
+
+                                                </Storyboard>
+                                            </VisualState>
+
+                                        </VisualStateGroup>
+                                    </VisualStateManager.VisualStateGroups>
+
+                                    <DockPanel
+                                        x:Name="DockPanel1"
+                                        Margin="10 0"
+                                        MinHeight="40">
+
+                                        <customControls:SprintStateControl
+                                            x:Name="SprintStateControl1"
+                                            DockPanel.Dock="Left"
+                                            Margin="0 3 15 3"
+                                            Value="{Binding SprintState}"
+                                            IsLabelVisible="False"
+                                            VerticalAlignment="Top" />
 
                                         <StackPanel
-                                            Orientation="Horizontal">
+                                            Margin="0 2">
+
+                                            <StackPanel
+                                                Orientation="Horizontal">
+
+                                                <TextBlock
+                                                    Text="Sprint"
+                                                    FontSize="16" />
+
+                                                <TextBlock
+                                                    Text="{Binding SprintNumber}"
+                                                    FontSize="16"
+                                                    Margin="3 0 0 0" />
+
+                                                <TextBlock
+                                                    Text="{Binding SprintDateInterval, StringFormat={}[{0}]}"
+                                                    Margin="10 0 0 0"
+                                                    VerticalAlignment="Center" />
+                                            </StackPanel>
 
                                             <TextBlock
-                                                Text="Sprint"
-                                                FontSize="16" />
+                                                x:Name="TextBlock1"
+                                                Text="{Binding SprintName}"
+                                                FontSize="12"
+                                                Margin="0 2 0 0" />
 
-                                            <TextBlock
-                                                Text="{Binding SprintNumber}"
-                                                FontSize="16"
-                                                Margin="3 0 0 0" />
-
-                                            <TextBlock
-                                                Text="{Binding SprintDateInterval, StringFormat={}[{0}]}"
-                                                Margin="10 0 0 0"
-                                                VerticalAlignment="Center" />
                                         </StackPanel>
 
-                                        <TextBlock
-                                            x:Name="TextBlock1"
-                                            Text="{Binding SprintName}"
-                                            FontSize="12"
-                                            Margin="0 2 0 0" />
+                                    </DockPanel>
 
-                                    </StackPanel>
+                                </Border>
 
-                                </DockPanel>
+                                <ControlTemplate.Triggers>
+                                    <MultiTrigger>
+                                        <MultiTrigger.Conditions>
+                                            <Condition Property="IsSelected" Value="True" />
+                                            <Condition Property="Selector.IsSelectionActive" Value="True" />
+                                        </MultiTrigger.Conditions>
+                                        <MultiTrigger.Setters>
+                                            <Setter TargetName="SprintStateControl1" Property="IsIconShadowVisible" Value="True" />
+                                        </MultiTrigger.Setters>
+                                    </MultiTrigger>
+                                </ControlTemplate.Triggers>
 
-                            </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
 
-                            <ControlTemplate.Triggers>
-                                <MultiTrigger>
-                                    <MultiTrigger.Conditions>
-                                        <Condition Property="IsSelected" Value="True" />
-                                        <Condition Property="Selector.IsSelectionActive" Value="True" />
-                                    </MultiTrigger.Conditions>
-                                    <MultiTrigger.Setters>
-                                        <Setter TargetName="SprintStateControl1" Property="IsIconShadowVisible" Value="True" />
-                                    </MultiTrigger.Setters>
-                                </MultiTrigger>
-                            </ControlTemplate.Triggers>
+        </ListView>
 
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </ListView.ItemContainerStyle>
-
-    </ListView>
+    </customControls:MissingContentPanel>
 
 </UserControl>
