--- a/sources/VeloCity.Wpf.Presentation/Pages/Team/TeamPage.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/Team/TeamPage.xaml
@@ -50,35 +50,61 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <ListView
+        <customControls:MissingContentPanel
             Grid.Column="0"
-            ItemsSource="{Binding TeamMembers}"
-            SelectedItem="{Binding SelectedTeamMember}"
-            BorderThickness="0">
+            IsContentVisible="{Binding HasTeamMembers}">
 
-            <ListView.ItemTemplate>
-                <DataTemplate>
+            <customControls:MissingContentPanel.MissingContent>
+                <Border
+                    Background="{StaticResource PrimaryDarkBrush}">
 
-                    <TextBlock
-                        Text="{Binding}"
-                        Margin="15 5">
+                    <ContentControl
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        MinWidth="300">
 
-                        <TextBlock.Style>
-                            <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
-                                <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding IsEmployed}" Value="False">
-                                        <Setter Property="Foreground" Value="{StaticResource FontDisabledBrush}" />
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </TextBlock.Style>
+                        <TextBlock
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="20"
+                            Text="No Team Members"
+                            IsEnabled="False" />
 
-                    </TextBlock>
+                    </ContentControl>
 
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                </Border>
+            </customControls:MissingContentPanel.MissingContent>
+
+            <ListView
+                ItemsSource="{Binding TeamMembers}"
+                SelectedItem="{Binding SelectedTeamMember}"
+                BorderThickness="0">
+
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+
+                        <TextBlock
+                            Text="{Binding}"
+                            Margin="15 5">
+
+                            <TextBlock.Style>
+                                <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}">
+                                    <Setter Property="Foreground" Value="{StaticResource FontPrimaryBrush}" />
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding IsEmployed}" Value="False">
+                                            <Setter Property="Foreground" Value="{StaticResource FontDisabledBrush}" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+
+                        </TextBlock>
+
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+        </customControls:MissingContentPanel>
 
         <GridSplitter
             Grid.Column="1"
@@ -93,12 +119,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
             <customControls:MissingContentPanel.MissingContent>
 
-                <StackPanel Orientation="Vertical">
+                <StackPanel
+                    Orientation="Vertical"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
 
                     <customControls:GenericIcon
                         Style="{StaticResource TeamIconStyle}"
                         Width="120"
-                        Height="120"/>
+                        Height="120" />
 
                     <TextBlock
                         HorizontalAlignment="Center"
@@ -106,7 +135,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                         FontSize="20"
                         Text="Under construction"
                         IsEnabled="False"
-                        Margin="0 10 0 0"/>
+                        Margin="0 20 0 0" />
 
                 </StackPanel>
 
