--- a/sources/VeloCity.Wpf.Presentation/Pages/Main/MainWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/Pages/Main/MainWindow.xaml
@@ -28,6 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     xmlns:team="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Team"
     xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
     xmlns:holidays="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Holidays"
+    xmlns:charts="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.Pages.Charts"
 
     mc:Ignorable="d"
     Title="{Binding Title}"
@@ -46,6 +47,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/TeamIconStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/HolidaysIconStyles.xaml" />
                 <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/RefreshIconStyles.xaml" />
+                <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/CustomControls/ChartIconStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -75,10 +77,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </StackPanel>
             </StatusBarItem>
         </StatusBar>
-
-        <!--<sprints:SprintsPage
-            DataContext="{Binding SprintsPageViewModel}"
-            Margin="0" />-->
 
         <Grid>
 
@@ -247,7 +245,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                 </TabItem>
 
-                <!--<TabItem>
+                <TabItem>
 
                     <TabItem.Header>
 
@@ -271,7 +269,33 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                     <holidays:HolidaysPage
                         DataContext="{Binding TeamPageViewModel}" />
 
-                </TabItem>-->
+                </TabItem>
+
+                <TabItem>
+
+                    <TabItem.Header>
+
+                        <customControls:GenericIcon
+                            Width="40"
+                            Height="40"
+                            Style="{StaticResource ChartIconStyle}">
+
+                            <Control.Effect>
+                                <DropShadowEffect
+                                    Color="{StaticResource PrimaryColor}"
+                                    Direction="0"
+                                    ShadowDepth="0"
+                                    BlurRadius="10" />
+                            </Control.Effect>
+
+                        </customControls:GenericIcon>
+
+                    </TabItem.Header>
+
+                    <charts:ChartsPage
+                        DataContext="{Binding ChartsViewModel}" />
+
+                </TabItem>
 
             </TabControl>
 
